test/tests/stages/16_characters_and_strings/invalid_types/compound_initializer_for_pointer.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[22]:
  int
  identifier(main)
  (
  void
  )
  {
  char
  *
  identifier(ptr)
  =
  {
  const char('a')
  ,
  const char('b')
  ,
  const char('c')
  }
  ;
  return
  const int(0)
  ;
  }
